Final touches for DAS